# learned-joins

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: avx512vl.hpp  config.h  head.hpp  kapil_chained.hpp  kapil_chained_exotic.hpp  kapil_chained_model.hpp  kapil_cuckoo.hpp  kapil_cuckoo_model.hpp  kapil_probe.hpp  kapil_probe_exotic.hpp  kapil_probe_model.hpp  mmphf_table.hpp  monotone_hashtable.hpp  profile.h  profile.hpp  support.hpp
include/benchmarking/: benchmark_helper_base.h  non_partition_join_eth_benchmark_helper.h
include/benchmarks/: Config.hpp  Primitives.hpp
include/benchmarks/ssb/: Queries.hpp
include/benchmarks/tpch/: Queries.hpp
include/common/: Compat.hpp  Util.hpp  defs.hpp
include/common/algebra/: Operators.hpp  Pipeline.hpp  Types.hpp
include/common/runtime/: Barrier.hpp  Concurrency.hpp  Database.hpp  Hash.hpp  Hashmap.hpp  HashmapSmall.hpp  Import.hpp  Memory.hpp  MemoryPool.hpp  Mmap.hpp  PartitionedDeque.hpp  Query.hpp  SIMD.hpp  Stack.hpp  String.hpp  Types.hpp  Util.hpp
include/configs/: base_configs.h  base_configs_backup.h  cpu-mapping-v2.txt  cpu-mapping.txt  eth_configs.h  eth_configs_backup.h
include/hyper/: ParallelHelper.hpp
include/imv/: HashAgg.hpp  HashBuild.hpp  HashBuildSSB.hpp  HashProbe.hpp  Pipeline.hpp  PipelineBuild.hpp  PipelineSSB.hpp  PipelineTPCH.hpp
include/imv-operator/: aggregation.hpp  barrier.h  build.hpp  cpu_mapping.h  generator.h  genzipf.h  no_partitioning_join.h  npj.hpp  npj_params.hpp  npj_types.hpp  prefetch.hpp  rdtsc.h  tree_node.h  tuple_buffer.hpp  types.hpp
include/rof/: AmacBuild.hpp  AmacProbe.hpp  SimdFilter.hpp
include/techniques/: hash_join_steps_base.h  non_partition_join_eth_steps.h  sortmerge_join_steps_base.h  sortmerge_multiway_join_eth_steps.h  sortmerge_multiway_join_learned_steps.h
include/utils/: CC_CSSTree.h  affinity.h  algorithms.h  art32_tree.h  art64_tree.h  barrier.h  base_utils.h  cpu_mapping.h  cpu_mapping_one_numa.h  csv.h  data_generation.h  data_structures.h  datasets.hpp  eth_data_structures.h  io.h  learned_sort.h  learned_sort_avx.h  learned_sort_for_sort_merge.h  math.h  memory.h  numa_shuffle.h  stanford_hash.h
include/utils/eth_avx_merge/: avx_multiwaymerge.h  scalar_multiwaymerge.h
include/utils/eth_avx_sort/: avxsort.h  avxsort_multiway.h
include/vectorwise/: Operations.hpp  Operators.hpp  Primitives.hpp  Query.hpp  QueryBuilder.hpp  VectorAllocator.hpp  defs.hpp
scripts/analysis/: algos_vs_runtime_for_1_dataset.py  algos_vs_runtime_for_5_datasets.py  eth_sort_merge_join_analyzer.py  learned_sort_merge_join_analyzer.py  non_partition_join_analyzer.py  parsed_benchmark_output.py  radix_join_analyzer.py
scripts/evaluation/: base_configs_maker.sh  eth_configs_maker.sh  learned_sort_merge_join_tuner.sh  non_imv_indexed_nested_loop_join_tuner.sh  non_partition_join_tuner.sh  radix_join_tuner.sh  sort_merge_join_tuner.sh
scripts/rmi/: build_rmis.sh  generate_all_rmis.sh  plot_utils.py  prepare_rmi_data.py  prepare_rmi_data_for_hashing_project.py
scripts/sosd/: sosd.sh
scripts/tpch/: tpch.sh
src/benchmark_runners/: avx512_benchmarker.cpp  joins_runner.cpp  learned_imv_sort_join_runner.cpp  non_imv_indexed_nested_loop_join_runner.cpp  non_learned_non_imv_sort_join_runner.cpp  non_learned_sort_join_runner.cpp  non_partition_join_runner.cpp  partition_join_runner.cpp
src/benchmarks/: config.cpp  simdJoin.cpp
src/benchmarks/hardware/: latency.cpp  randomWrites.cpp
src/benchmarks/primitives/: joinmicrobench.cpp  run.cpp  simdselection.cpp
src/benchmarks/sbb/: run.cpp
src/benchmarks/sbb-old/: run.cpp
src/benchmarks/sbb-old/queries/: q11.cpp  q12.cpp  q13.cpp  q21.cpp  q22.cpp  q23.cpp  q31.cpp  q32.cpp  q33.cpp  q34.cpp  q41.cpp  q42.cpp  q43.cpp
src/benchmarks/sbb/queries/: q11.cpp  q12.cpp  q13.cpp  q21.cpp  q22.cpp  q23.cpp  q31.cpp  q32.cpp  q33.cpp  q34.cpp  q41.cpp  q42.cpp  q43.cpp
src/benchmarks/tpch/: run.cpp
src/benchmarks/tpch/queries/: q1.cpp  q18.cpp  q3.cpp  q5.cpp  q5_no_sel.cpp  q6.cpp  q9.cpp
src/common/algebra/: Operators.cpp  Pipeline.cpp  Types.cpp
src/common/runtime/: Concurrency.cpp  Database.cpp  Import.cpp  MemoryPool.cpp  String.cpp  Types.cpp
src/configs/: base_configs_backup.h  cpu-mapping.txt
src/exotic-hashing/: LICENSE.md  README.md  build-debug.sh  build.sh  exotic_hashing.hpp  export.py  only_new.py  results.json  run.sh  test.sh
src/exotic-hashing/include/convenience/: builtins.hpp
src/exotic-hashing/include/mmphf/: adaptive_learned_mmphf.hpp  compact_trie.hpp  fast_succinct_trie.hpp  hollow_trie.hpp  la_vector.hpp  learned_linear.hpp  learned_rank.hpp  rank_hash.hpp
src/exotic-hashing/include/mphf/recsplit/: LICENSE.md  recsplit.hpp
src/exotic-hashing/include/mphf/recsplit/src/: DoubleEF.hpp  RecSplit.hpp  RiceBitVector.hpp
src/exotic-hashing/include/mphf/recsplit/src/support/: common.hpp
src/exotic-hashing/include/mphf/recsplit/src/util/: Vector.hpp
src/exotic-hashing/include/omphf/: map_omphf.hpp  mwhc.hpp
src/exotic-hashing/include/phf/: bit_mwhc.hpp  do_nothing_hash.hpp
src/exotic-hashing/include/sf/: sf_mwhc.hpp
src/exotic-hashing/include/support/: bitconverter.hpp  bitvector.hpp  clustering.hpp  elias.hpp  elias_fano_list.hpp  support.hpp
src/imv/: PipelineTPCH.cpp
src/imv-operator/: build.cpp  cpu_mapping.cpp  generator.cpp  genzipf.cpp  main.cpp  no_partitioning_join.cpp  npj.cpp
src/utils/: algorithms.h  base_utils.h  data_generation.h  data_structures.h  learned_sort_avx.h  learned_sort_for_sort_merge.h
src/utils/eth_avx_merge/: avx_multiwaymerge.h  merge.h
src/utils/eth_avx_sort/: avxcommon.h  avxsort_core.h
src/vectorwise/: Operations.cpp  Operators.cpp  QueryBuilder.cpp
src/vectorwise/primitives/: Aggregation.cpp  Hash.cpp  KeyEquality.cpp  Partition.cpp  Projection.cpp  ScatterGather.cpp  Selection.cpp
